--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
-﻿- persist after restart
-- implement actual aod team selection
+﻿- implement actual aod team selection
 - role requirements for commands
 - notifying people trying to sign up without having read rules
 - regular sign ups for aod/raids/rago?
