--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
-﻿- add cancel button to complete team
+﻿- add revert button to edit window as we can do that now
+- hide cancel button (or rename to revert) after confirming team once.
+	- note: if we want the bot to ping the users when the team is confirmed, do we want to be able to revert?
+- implement role requirements
 
 - implement actual aod team selection
 - role requirements for commands
@@ -7,3 +10,5 @@
 - combined raids signup
 - deploy script so we can have a release instance running while we can run a separate test instance.
 	- this should also deploy the release token
+
+- winston picture command
