Implement basic signup permission check and added (unimplemented) commands for setting pvm rules channel and boss signup permissions.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-﻿- implement role requirements
+﻿- how can we add role requirements for specific bosses?
+- test multiple people hitting buttons at once
 
 - implement actual aod team selection
 - role requirements for commands
