+ Fix an issue where the wrong subcommand would be invoked. + Fixed configure boss-signup not printing the boss name. + Configure action now only displays commands that have actions.

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@
 - update action context to also store interactions when pming people.
 - split other config commands into subcommands
 - list subcommands in action/subcommand attribute
-
+- add view all config settings subcommand
 
 - test multiple people hitting buttons at once
 - harden guild.GetUser against users no longer in the discord
