--- a/todo.txt
+++ b/todo.txt
@@ -6,17 +6,16 @@
 	- button builder idea
 	- an action could only be used for a single command (would be fine for my use, but if we want to make a lib then maybe not.)
 
-- update interaction service to save to file. auto delete messages older than n days.
-- update action context to also store interactions when pming people.
+- use dependency injection to inject services for commands
 - split other config commands into subcommands
-- list subcommands in action/subcommand attribute
 - add view all config settings subcommand
 
-- use dependency injection to inject services for commands
+- update interaction service to save to file. auto delete messages older than n days.
+- update action context to also store interactions when pming people.
+
 - test multiple people hitting buttons at once
 - harden guild.GetUser against users no longer in the discord
 
-- boss embed color
 - notifying people trying to sign up without having read rules
 - regular sign ups for aod/raids/rago?
 - combined raids signup
@@ -27,3 +26,5 @@
 
 Done:
 - role requirements for commands
+- boss embed color
+- ping blav every time he responds with the ping command
