--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,14 @@
-﻿- option for schedule to clear channel first (except pinned)
+﻿Multi-team;
+- read dates when looking at history so we can support multiple teams
+- store a guid for each history row (and store it in the message) so we can delete more accurately.
+- each team should be a separate message so the pvm-signup commands still work.
+- when removing a history row, pass in the team and validate. Or add an id column to the row and store that in the message.
+- store signed up users in db so we don't have to worry about the bot restarting
+
+- button to preview the selected team
+- option for schedule to clear channel first (except pinned)
 - host subcommand to view stats about users in the DB
 
-- only register certain commands that i'm testing when running in debug mode 
 - ping people selected for team
 - add counter for number of people signed up
 
@@ -36,3 +43,5 @@ Done:
 - use dependency injection to inject services for commands
 - improve logging
 - test multiple people hitting buttons at once
+- only register certain commands that i'm testing when running in debug mode 
+- button to revert the completed team back to a signup so we can add/remove people and re-calculate
